Fix tweet actions alignment

--- a/theme.scss
+++ b/theme.scss
@@ -123,7 +123,7 @@ $column-border-right-width: 1px;
     			.tweet-actions,
     			.js-tweet-actions {
     				position: absolute !important;
-    				bottom: -10px !important;
+    				bottom: 0 !important;
     				right: 0 !important;
 
     				&:hover {
